Parâmetro obrigatório id do comando ao obter lista de regionais
